--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-native-fontawesome": "^0.3.2",
     "expo": "~51.0.18",
     "expo-status-bar": "~1.12.1",
+    "firebase": "^10.12.3",
     "formik": "^2.4.6",
     "react": "18.2.0",
     "react-native": "0.74.3",
